--- a/proyectoS9.ipynb
+++ b/proyectoS9.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,9 @@
     "\n",
     "# Accedo a los datos y preparo los DataFrames\n",
     "\n",
-    "visits = pd.read_csv('visits_log_us.csv')\n",
-    "costs = pd.read_csv('costs_us.csv')\n",
-    "orders = pd.read_csv('orders_log_us.csv')"
+    "visits = pd.read_csv('data/costs_us.csv')\n",
+    "costs = pd.read_csv('data/costs_us.csv')\n",
+    "orders = pd.read_csv('data/orders_log_us.csv')"
    ]
   },
   {
